@@ -1,4 +1,7 @@
 release 1.13
+- Fixed issue 1200
+  http://java.net/jira/browse/JERSEY-1200
+  Extracting Form parameters when consumed by filters was specific to POST method. Now it works for PUT and other methods as well.
 - Fixed issue 1057
   http://java.net/jira/browse/JERSEY-1057
   SAXParserContextProvider fail inconsistenly for missing XML parser features
